# llama.cpp

common/: chat-parser.cpp
examples/llama.android/lib/: build.gradle.kts  consumer-rules.pro
examples/llama.android/lib/src/main/cpp/: CMakeLists.txt  ai_chat.cpp  logging.h
examples/llama.android/lib/src/main/cpp/opencl-stub/: CMakeLists.txt  opencl_stub.c
examples/llama.android/lib/src/main/java/com/arm/aichat/: AiChat.kt  InferenceEngine.kt
examples/llama.android/lib/src/main/java/com/arm/aichat/gguf/: FileType.kt  GgufMetadata.kt  GgufMetadataReader.kt
examples/llama.android/lib/src/main/java/com/arm/aichat/internal/: InferenceEngineImpl.kt
examples/llama.android/lib/src/main/java/com/arm/aichat/internal/gguf/: GgufMetadataReaderImpl.kt
examples/llama.android/lib/src/main/java/com/nihildigit/lightwayllama/llm/: LlamaRuntimeConfig.kt  LlmEngine.kt  LlmSession.kt
